--- a/styles/works.css
+++ b/styles/works.css
@@ -7,7 +7,7 @@ HERO
 
 .works {
     display: grid;
-`    grid-column-gap: 20px;
+    grid-column-gap: 20px;
     grid-row-gap: 20px;
     grid-template-rows: auto auto;
     grid-template-columns: 1fr;
@@ -87,7 +87,7 @@ HERO
     .works {
         grid-template-columns: 1fr 1fr;
         grid-row-gap: 1em;
-
+        grid-column-gap: 1em;
     }
 
     .works h4 {
